--- a/public/index.html
+++ b/public/index.html
@@ -28,23 +28,14 @@
     <br>
     <br>
     <br>
-    <form id="classform" method="POST">
-      <form>
-        <label for="fname" class="formtext">First name:</label><br>
-        <input type="text" id="fname" name="fname" required><br>
-        <label for="lname" class="formtext">Last name:</label><br>
-        <input type="text" id="lname" name="lname" required><br>
-        <label for="email" id="emailtext">Email:</label><br>
-        <input type="text" id="email" name="email" required><br>
-        <!--
-        <label for="schedule" id="scheduletext">Schedule:</label><br>
-        <textarea id="schedule" rows="100" cols="100"></textarea><br><br>
-        -->
-        <label for="schedulefile" id="schedulefile">Schedule File Upload:</label><br><br>
-        <input type="file" id="schedulephoto" name="schedulefile" accept=".pdf, .png, .jpeg"><br><br>
-        <button type="button" id="send">Submit</button>
-      </form>
+    <form class="classform" action="/submit" enctype="multipart/form-data" method="post" >
+      <div>Email: <input type="email" name="email" /></div>
+      <br>
+      <div>Screenshot: <input type="file" name="image" /></div>
+      <br>
+      <input type="submit" value="Upload" onclick="finishedSending(event,this)"/>
     </form>
+    
     <br>
     <script src="./ScheduleProcessor.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
